--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 3.14)
 project(mousereplayproj)
 add_library(mousereplay mousereplay.cpp)
 set_target_properties(mousereplay PROPERTIES CXX_STANDARD 20)
-add_executable(sample sample.cpp)
-set_target_properties(sample PROPERTIES CXX_STANDARD 20)
-target_link_libraries(sample PUBLIC mousereplay)
+add_executable(example example.cpp)
+set_target_properties(example PROPERTIES CXX_STANDARD 20)
+target_link_libraries(example PUBLIC mousereplay)
